changed(btn url) - moon

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>HAKAI.search</title>
     <link rel="stylesheet" href="hakai.css">
     <link href="https://fonts.googleapis.com/css2?family=Outfit&display=swap" rel="stylesheet">
+    <base target="_blank">
 </head>
 
 <body>
@@ -32,11 +33,11 @@
     <h1 class="hakai">Hakai</h1>
 
     <div id="content">
-        <form action="https://www.google.com/search" method="get">
+        <form action="https://www.google.com/search" target="_blank" method="get">
             <input placeholder="Search the Dragon Balls" type="text" name="q" id="userInput">
             <div class="btns">
                 <input type="submit" value="SEARCH">
-                <p class="moon"><a href="">Watch me destroy the mOOn</a></p>
+                <p class="moon"><a href="https://youtu.be/Pj2Bzztt0XE" target="_blank">Watch me destroy the mOOn</a></p>
             </div>
         </form>
     </div>
